Fix whitespace errors so that designers names always stick together. Also preserve space on desktop

--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -19,3 +19,7 @@ a {
 .unbreakable-name {
   white-space: nowrap;
 }
+
+.preserve-whitespace {
+  white-space: pre;
+}
